objects/CS_Basket_Snapshot_Transactional__c.object
<CustomObject>
    <description>Transactional object used with Basket Snapshot Manager logic. Other transactional objects can be created per same principle.</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attribute Lookup (set on Attribute strategy)</description>
        <label>Attribute</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_for_Breakdown__c</fullName>
        <label>Category for Breakdown</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_for_Order_Confirmation__c</fullName>
        <label>Category for Order Confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_for_Quote__c</fullName>
        <label>Category for Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineItemCategory__c</fullName>
        <label>LineItemCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity lookup (set by default if exists on related basket)</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product Configuration Lookup (set by default if exists on related configuration)</description>
        <label>Parent Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional (Parent Product Configuration)</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Basket Lookup (set on every record)</description>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Category Lookup (set by default if exists on related definition)</description>
        <label>Product Category</label>
        <referenceTo>cscfga__Product_Category__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Configuration Lookup (set on every record)</description>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Definition Lookup (set on every record)</description>
        <label>Product Definition</label>
        <referenceTo>cscfga__Product_Definition__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Root Product Configuration Lookup (set by default if exists on related configuration)</description>
        <label>Root Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional (Root Product Configuration)</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Example Text field</description>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_for_Quote__c</fullName>
        <label>Text for Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>CS Basket Snapshots Transactional</relationshipLabel>
        <relationshipName>CS_Basket_Snapshots_Transactional</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Display_Status__c</fullName>
        <label>Display Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>CS Basket Snapshot Transactional</label>
    <listViews>
        <fullName>View_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>Product_Configuration__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Basket__c</columns>
        <columns>Value__c</columns>
        <columns>Type__c</columns>
        <columns>LineItemCategory__c</columns>
        <columns>Attribute__c</columns>
        <columns>Category_for_Quote__c</columns>
        <columns>Category_for_Order_Confirmation__c</columns>
        <columns>Category_for_Breakdown__c</columns>
        <columns>Text_for_Quote__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPC_Display_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>View Snapshots</label>
    </listViews>
    <nameField>
        <label>Basket_Snapshot_Transactional Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Basket Snapshots Transactional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>